CSS in server update

--- a/server/public/assets/css/main.css
+++ b/server/public/assets/css/main.css
@@ -1,16 +1,26 @@
+html, body {
+    margin: 0;
+}
+
 .input-div {
   width: 100%;
   position: fixed;
-  top: 140px;
-  left: 25%;
+  bottom: calc(52%);
+  text-align: center;
 }
 
-.form-label{
+.form-label {
   color: white;
   font-size: 16px;
 }
 
-.login-input{
+.login-input {
   width: 200px;
   height: 20px;
+}
+
+@media screen and (max-height: 600px) {
+  .input-div {
+    bottom: calc(45%);
+  }
 }
